--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>org.example</groupId>
   <artifactId>Sprint_7</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Archetype - Sprint_7</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- версия Aspectj -->
     <aspectj.version>1.9.7</aspectj.version>
-    <!-- версия Allure -->
     <allure.version>2.15.0</allure.version>
   </properties>
   <dependencies>
@@ -35,7 +34,6 @@
       <version>2.10.1</version>
     </dependency>
 
-    <!-- модуль взаимодействия Allure и Junit -->
     <dependency>
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-junit4</artifactId>
@@ -43,7 +41,6 @@
     </dependency>
 
     <dependency>
-      <!-- модуль взаимодействия Allure и RestAssured -->
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-rest-assured</artifactId>
       <version>${allure.version}</version>
@@ -59,7 +56,6 @@
   <build>
     <plugins>
       <plugin>
-        <!-- настройка плагина maven-surefire-plugin -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
@@ -76,7 +72,6 @@
           </properties>
           <systemProperties>
             <property>
-              <!-- папка, в которую будут генерироваться отчёты Allure -->
               <name>allure.results.directory</name>
               <value>${project.build.directory}/allure-results</value>
             </property>
@@ -90,7 +85,7 @@
           </dependency>
         </dependencies>
       </plugin>
-      <!-- подключение плагина allure-maven для вызова функций Allure с помощью Maven -->
+
       <plugin>
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
@@ -101,5 +96,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
